<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

   <RelativeLayout
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      tools:context=".MainActivity">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="?android:attr/buttonBarStyle"
         android:id="@+id/buttonRow_getImage">

         <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_takeImage"
            android:onClick="takeImage"
            android:id="@+id/button_takeImage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

         <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseImageFromGallery"
            android:onClick="chooseImageFromGallery"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_chooseImageFromGallery"/>

      </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="?android:attr/buttonBarStyle"
         android:layout_below="@id/buttonRow_getImage"
         android:id="@+id/buttonRow_processImage">

         <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cropImage"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_cropImage"
            android:id="@+id/button_cropImage"/>

         <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveCroppedImage"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_saveCroppedImage"
            android:id="@+id/button_saveCroppedImage"/>
      </LinearLayout>

      <com.isseiaoki.simplecropview.CropImageView
         android:id="@+id/cropImageView"
         xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         custom:cropMode="ratio_free"
         android:layout_below="@id/buttonRow_processImage"
         />

      <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/croppedImageView"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
         android:paddingTop="20dp"
         android:contentDescription="@string/descripton_image"
         android:layout_below="@id/cropImageView"
         />

   </RelativeLayout>
</ScrollView>
